🐧 fixes to copy

--- a/app/renderer/cards.html
+++ b/app/renderer/cards.html
@@ -99,7 +99,7 @@
         </table>
 
         <div class="empty-state" style="display: none">
-          <p>No credit cards added yet. Add your first card above to start monitoring your credit usage!</p>
+          <p>No credit cards added yet. Add your first card above to start monitoring your credit usage.</p>
         </div>
       </section>
     </main>
