--- a/app/renderer/incomes.html
+++ b/app/renderer/incomes.html
@@ -12,7 +12,7 @@
   <body>
     <header>
       <h1>Income Sources</h1>
-      <p>Track every penny that moos into your account.</p>
+      <p>Track every penny that moves into your account.</p>
     </header>
 
     <nav role="navigation" aria-label="Main navigation">
@@ -32,32 +32,32 @@
         <h2 id="add-income-heading" class="title-2">Add New Income Source</h2>
         <p class="body secondary-label">Record all money coming in to get a complete picture of your financial situation. Include your salary, side hustles, investments, or any other income streams.</p>
 
-        <form id="incomeForm">
+        <form id="income-form">
           <fieldset>
             <legend>Income Details</legend>
 
             <div class="form-group">
-              <label for="incomeName">Income name *</label>
-              <input id="incomeName" type="text" maxlength="50" required placeholder="e.g., Main Job, Freelance Work" aria-describedby="name-help" />
-              <p id="name-help" class="help-text">Give this income source a clear name so you can easily identify it later.</p>
+              <label for="income-name">Income name *</label>
+              <input id="income-name" type="text" maxlength="50" required placeholder="e.g., Main Job, Freelance Work" aria-describedby="income-name-help" />
+              <p id="income-name-help" class="help-text">Give this income source a clear name so you can easily identify it later.</p>
             </div>
 
             <div class="form-group">
-              <label for="incomeDescription">Description</label>
-              <input id="incomeDescription" type="text" maxlength="200" placeholder="Additional details (optional)" aria-describedby="description-help" />
-              <p id="description-help" class="help-text">Add any extra details like project names, client info, or notes about this income source.</p>
+              <label for="income-description">Description</label>
+              <input id="income-description" type="text" maxlength="200" placeholder="Additional details (optional)" aria-describedby="income-description-help" />
+              <p id="income-description-help" class="help-text">Add any extra details like project names, client info, or notes about this income source.</p>
             </div>
 
             <div class="form-group">
-              <label for="incomeCompany">Company or source</label>
-              <input id="incomeCompany" type="text" maxlength="50" placeholder="Employer name or client" aria-describedby="company-help" />
-              <p id="company-help" class="help-text">Where does this money come from?</p>
+              <label for="income-company">Company or source</label>
+              <input id="income-company" type="text" maxlength="50" placeholder="Employer name or client" aria-describedby="income-company-help" />
+              <p id="income-company-help" class="help-text">Where does this money come from?</p>
             </div>
 
             <div class="form-group">
-              <label for="incomeAmount">Amount *</label>
-              <input id="incomeAmount" type="text" inputmode="decimal" required placeholder="0.00" aria-describedby="amount-help" />
-              <p id="amount-help" class="help-text">Enter the amount you receive each time.</p>
+              <label for="income-amount">Amount *</label>
+              <input id="income-amount" type="text" inputmode="decimal" required placeholder="0.00" aria-describedby="income-amount-help" />
+              <p id="income-amount-help" class="help-text">Enter the amount you receive each time.</p>
             </div>
           </fieldset>
 
@@ -65,43 +65,43 @@
             <legend>Payment Schedule</legend>
 
             <div class="form-group">
-              <label for="incomeRecurrence">How often *</label>
-              <select id="incomeRecurrence" required aria-describedby="recurrence-help"></select>
-              <p id="recurrence-help" class="help-text">Choose how frequently you receive this income payment.</p>
+              <label for="income-recurrence">How often *</label>
+              <select id="income-recurrence" required aria-describedby="income-recurrence-help"></select>
+              <p id="income-recurrence-help" class="help-text">Choose how frequently you receive this income payment.</p>
             </div>
 
-            <div id="incomeReceiveDateWrap" style="display: none" class="form-group">
-              <label for="incomeReceiveDate">Receive date</label>
-              <input id="incomeReceiveDate" type="date" aria-describedby="receive-date-help" />
-              <p id="receive-date-help" class="help-text">When will you receive this one-time payment?</p>
+            <div id="income-receive-date-wrap" style="display: none" class="form-group">
+              <label for="income-receive-date">Receive date</label>
+              <input id="income-receive-date" type="date" aria-describedby="income-receive-date-help" />
+              <p id="income-receive-date-help" class="help-text">When will you receive this one-time payment?</p>
             </div>
 
-            <div id="incomeWeeklyWrap" style="display: none" class="form-group">
-              <label for="incomeWeekday">Day of week</label>
-              <select id="incomeWeekday" aria-describedby="weekday-help"></select>
-              <p id="weekday-help" class="help-text">Which day of the week do you typically get paid?</p>
+            <div id="income-weekly-wrap" style="display: none" class="form-group">
+              <label for="income-weekday">Day of week</label>
+              <select id="income-weekday" aria-describedby="income-weekday-help"></select>
+              <p id="income-weekday-help" class="help-text">Which day of the week do you typically get paid?</p>
             </div>
 
-            <div id="incomeMonthlyWrap" style="display: none" class="form-group">
-              <label for="incomeDay">Day of month</label>
-              <input id="incomeDay" type="number" min="1" max="30" placeholder="15" aria-describedby="monthly-day-help" />
-              <p id="monthly-day-help" class="help-text">Which day of the month do you receive this income?</p>
+            <div id="income-monthly-wrap" style="display: none" class="form-group">
+              <label for="income-day">Day of month</label>
+              <input id="income-day" type="number" min="1" max="30" placeholder="15" aria-describedby="income-monthly-day-help" />
+              <p id="income-monthly-day-help" class="help-text">Which day of the month do you receive this income?</p>
             </div>
 
-            <div id="incomeAnnualWrap" style="display: none" class="form-group">
-              <label for="incomeMonth">Month</label>
-              <select id="incomeMonth" aria-describedby="annual-month-help"></select>
-              <label for="incomeDayAnnual">Day</label>
-              <input id="incomeDayAnnual" type="number" min="1" max="30" placeholder="1" aria-describedby="annual-day-help" />
-              <p id="annual-month-help" class="help-text">When do you receive this annual payment?</p>
+            <div id="income-annual-wrap" style="display: none" class="form-group">
+              <label for="income-month">Month</label>
+              <select id="income-month" aria-describedby="income-annual-month-help"></select>
+              <label for="income-day-annual">Day</label>
+              <input id="income-day-annual" type="number" min="1" max="30" placeholder="1" aria-describedby="income-annual-day-help" />
+              <p id="income-annual-month-help" class="help-text">When do you receive this annual payment?</p>
             </div>
           </fieldset>
 
           <div class="form-actions">
-            <button id="incomeSubmit" type="submit" class="button-primary">Add Income Source</button>
+            <button id="income-submit" type="submit" class="button-primary">Add Income Source</button>
           </div>
 
-          <div id="incomeError" role="alert" aria-live="assertive" style="color: var(--color-system-red); margin-top: var(--spacing-12)"></div>
+          <div id="income-error" role="alert" aria-live="assertive" style="color: var(--color-system-red); margin-top: var(--spacing-12)"></div>
         </form>
       </section>
 
@@ -119,11 +119,11 @@
               <th scope="col">Actions</th>
             </tr>
           </thead>
-          <tbody id="incomesBody"></tbody>
+          <tbody id="incomes-body"></tbody>
         </table>
 
         <div class="empty-state" style="display: none">
-          <p>No income sources added yet. Add your first income above to start tracking your earnings!</p>
+          <p>No income sources added yet. Add your first income above to start tracking your earnings.</p>
         </div>
       </section>
     </main>
