--- a/app/renderer/index.html
+++ b/app/renderer/index.html
@@ -85,7 +85,7 @@
           <div class="card">
             <div class="card-header">
               <h3 id="balance-heading" class="card-title">Current Balance</h3>
-              <p class="card-subtitle">This is your net financial position - total confirmed income minus paid expenses</p>
+              <p class="card-subtitle">This is your net financial position - total confirmed income minus paid expenses.</p>
             </div>
             <div class="card-content">
               <div id="dashboard-balance" class="title-1" role="status" aria-live="polite">0.00</div>
@@ -97,7 +97,7 @@
           <div class="card">
             <div class="card-header">
               <h3 id="projection-heading" class="card-title">Monthly Projection</h3>
-              <p class="card-subtitle">Expected monthly cash flow based on all your recorded income and expenses. A positive number means you're saving money each month</p>
+              <p class="card-subtitle">Expected monthly cash flow based on all your recorded income and expenses. A positive number means you're saving money each month.</p>
             </div>
             <div class="card-content">
               <div id="dashboard-projection" class="title-1" role="status" aria-live="polite">0.00</div>
@@ -121,8 +121,8 @@
           <div class="list">
             <div class="list-item">
               <div class="list-item-content">
-                <div class="list-item-title">Saving Rate</div>
-                <div class="list-item-subtitle">Percentage of income you're saving each month. Aim for at least 20% for good financial health</div>
+                <h4 class="list-item-title">Saving Rate</h4>
+                <p class="list-item-subtitle">Percentage of income you're saving each month. Aim for at least 20% for good financial health.</p>
               </div>
               <div class="list-item-accessory">
                 <span id="health-saving-rate" class="headline" role="status" aria-live="polite">0%</span>
@@ -131,8 +131,8 @@
 
             <div class="list-item">
               <div class="list-item-content">
-                <div class="list-item-title">Credit Card Usage</div>
-                <div class="list-item-subtitle">Percentage of your total credit limit currently being used. Keep this below 30% for optimal credit score</div>
+                <h4 class="list-item-title">Credit Card Usage</h4>
+                <p class="list-item-subtitle">Percentage of your total credit limit currently being used. Keep this below 30% for optimal credit score.</p>
               </div>
               <div class="list-item-accessory">
                 <span id="health-credit-use" class="headline" role="status" aria-live="polite">0%</span>
@@ -141,8 +141,8 @@
 
             <div class="list-item">
               <div class="list-item-content">
-                <div class="list-item-title">Net Balance</div>
-                <div class="list-item-subtitle">Your overall financial position after all income and expenses are calculated</div>
+                <h4 class="list-item-title">Net Balance</h4>
+                <p class="list-item-subtitle">Your overall financial position after all income and expenses are calculated.</p>
               </div>
               <div class="list-item-accessory">
                 <span id="health-net-balance" class="headline" role="status" aria-live="polite">0.00</span>
