--- a/app/renderer/notifications.html
+++ b/app/renderer/notifications.html
@@ -64,7 +64,7 @@
 
             <div class="info-section">
               <h3 class="title-3">Reminder Schedule</h3>
-              <p class="body"><strong>Alert timing:</strong> 7 days in advance</p>
+              <p class="body"><strong>Alert timing:</strong> 7 days in advance.</p>
               <p class="help-text">All notifications are sent 7 days before due dates, giving you plenty of time to prepare and make payments.</p>
             </div>
           </fieldset>
