--- a/app/renderer/setup.html
+++ b/app/renderer/setup.html
@@ -21,28 +21,28 @@
             <legend>Initial Setup</legend>
 
             <div class="form-group">
-              <label for="setup-user-name">User name</label>
+              <label for="setup-user-name">User name *</label>
               <input id="setup-user-name" type="text" maxlength="30" required placeholder="Your name" />
             </div>
 
             <div class="form-group">
-              <label for="setup-currency">Default currency</label>
+              <label for="setup-currency">Default currency *</label>
               <select id="setup-currency" required></select>
             </div>
 
             <div class="form-group">
-              <label for="setup-date-format">Date format</label>
+              <label for="setup-date-format">Date format *</label>
               <select id="setup-date-format" required></select>
             </div>
 
             <div class="list">
-              <div class="list-item">
+              <label for="setup-notifications" class="list-item">
                 <div class="list-item-content">
                   <div class="list-item-title">Enable notifications</div>
-                  <div class="list-item-subtitle">Get reminders for bills and financial goals</div>
+                  <div class="list-item-subtitle">Get reminders for bills and financial goals.</div>
                 </div>
                 <input id="setup-notifications" type="checkbox" checked />
-              </div>
+              </label>
             </div>
           </fieldset>
 
